public class Estudio {
    //TODO: Atributos y métodos de un Estudio
}
