package main;

import usuarios.Medico;

import java.util.List;

public class AreaMedica {

    public Medico coordinador;
    public List<Medico> equipoMedico;
}
