package usuarios;

public class Paciente extends Usuario {
}
